[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "analyzer"
version = "0.1.0"
description = "LangGraph-based failure analyzer: retrieves relevant code chunks and reasons about root cause"
requires-python = ">=3.12"
dependencies = [
    "ingester-core",
    "click>=8.1",
    "rich>=13.0",
    "chromadb>=0.5",
    "langgraph>=0.2",
    "langchain>=0.3",
    "langchain-anthropic>=0.3",
    "langchain-openai>=0.2",
    "anthropic>=0.40",
    "openai>=1.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
analyzer = "analyzer.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
