[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ingester-splunk"
version = "0.1.0"
description = "Splunk ingester"
requires-python = ">=3.12"
dependencies = [
    "ingester-core",
    "requests>=2.31",
    "click>=8.1",
    "rich>=13.0",
]

[project.optional-dependencies]
dev = ["pytest>=8.0", "pytest-mock>=3.0"]

[project.scripts]
ingester-splunk = "ingester_splunk.cli:cli"

[tool.setuptools.packages.find]
where = ["src"]
